[tool.poetry]
name = "kt-var"
version = "0.1.0"
description = "Ferramenta de linha de comando para calcular variacao percentual"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/vfranca/kt-var"
keywords = ["cli", "trading"]
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Environment :: Console",
"Intended Audience :: Financial and Insurance Industry",
"License :: OSI Approved :: GNU General Public License (GPL)",
"Natural Language :: Portuguese (Brazilian)",
"Operating System :: Microsoft :: Windows :: Windows 10",
"Programming Language :: Python :: 3.9",
"Topic :: Adaptive Technologies",
"Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
var = "kt_var.cli:cli"
