[tool.poetry]
name = "kt-osc"
version = "0.2.1"
description = "Calcula oscilacao de preco"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/vfranca/kt-osc"
keywords = ["cli", "trading"]
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Environment :: Console",
"Intended Audience :: Financial and Insurance Industry",
"License :: OSI Approved :: GNU General Public License (GPL)",
"Natural Language :: Portuguese (Brazilian)",
"Programming Language :: Python :: 3.9",
"Topic :: Adaptive Technologies",
"Topic :: Office/Business :: Financial :: Investment"
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
osc = "kt_osc.cli:cli"
